Conectado Backend con Java y MySQL

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input value="admin@admin.com" required="required" autocomplete="off" type="email" id="email" name="email">
             <label for="password">Contraseña:</label>
             <input placeholder="1234" required="required" autocomplete="off" type="password" id="password" name="password">
-            <input formmethod="get" type="submit" value="Ingresar">
+            <input formmethod="post" type="submit" value="Ingresar">
         </form>
     </div>
     
